# django-app

./: Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
mysite/mysite/: settings.py
